--- a/action.yml
+++ b/action.yml
@@ -511,9 +511,9 @@ runs:
                 find "$PACKAGE_DIR" -name '*.zip' -delete
                 find "$PACKAGE_DIR" -name '*.bak' -delete
 
-                # Create ZIP archive at the root, zipping only the contents of package/ (no subfolder)
+                # Create ZIP archive at the root, zipping only the contents of package/ (no subfolder, no ZIPs)
                 cd "$PACKAGE_DIR"
-                zip -r ../${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip ./*
+                zip -r ../${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip .
                 cd ..
                 echo "Created ZIP archive: ${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
 
