Fix ZIP archive creation to use temporary path and prevent self-inclusion

--- a/action.yml
+++ b/action.yml
@@ -515,11 +515,18 @@ runs:
                 find "$PACKAGE_DIR" -name '*.zip' -delete
                 find "$PACKAGE_DIR" -name '*.bak' -delete
 
+                echo "DEBUG: Listing package directory before zipping:"
+                ls -la "$PACKAGE_DIR/"
+
                 # Create ZIP archive at the root, zipping only the contents of package/ (no subfolder, no ZIPs)
-                cd "$PACKAGE_DIR"
-                zip -r ../${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip . -x '*.zip'
-                cd ..
+                # Use a temp directory for the output ZIP to guarantee it is not included
+                TMP_ZIP_PATH="/tmp/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
+                zip -r "$TMP_ZIP_PATH" "$PACKAGE_DIR"/*
+                mv "$TMP_ZIP_PATH" "${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
                 echo "Created ZIP archive: ${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
+
+                echo "DEBUG: Listing root after zipping:"
+                ls -la .
 
                 # Output package path
                 echo "package_path=${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip" >> $GITHUB_OUTPUT
