--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,10 @@ name: 'Joomla Extension Packager'
 description: 'A composite action to package and release Joomla extensions (modules, plugins, components)'
 author: 'N6REJ'
 
+branding:
+    icon: 'package'
+    color: 'blue'
+
 inputs:
     # Extension identification
     extension-name:
@@ -86,9 +90,9 @@ inputs:
         required: false
         default: 'language'
     package-dir:
-        description: 'Package output directory'
+        description: 'Package output directory (always uses build/)'
         required: false
-        default: 'package'
+        default: 'build'
 
     # Additional features
     dir-tree-file:
@@ -427,11 +431,16 @@ runs:
                 # Use determined extension name and XML
                 EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
                 EXTENSION_XML="${{ steps.extension_details.outputs.extension_xml }}"
+                VERSION="${{ steps.set_version.outputs.version }}"
                 
-                # Create package directory
-                mkdir -p ${{ inputs.package-dir }}/$EXTENSION_NAME
+                # Always use build/ as the temp/output directory
+                BUILD_DIR="build"
                 
-                # Prepare rsync exclude patterns
+                # Clean and create build directory
+                rm -rf "$BUILD_DIR"
+                mkdir -p "$BUILD_DIR"
+                
+                # Prepare rsync exclude patterns (do not reference .gitignore at all)
                 EXCLUDES=(
                   --exclude='.git/'
                   --exclude='.github/'
@@ -443,50 +452,41 @@ runs:
                 # If .packagerignore exists, add its patterns
                 if [ -f .packagerignore ]; then
                   while IFS= read -r line; do
-                    # Ignore comments and empty lines
                     [[ "$line" =~ ^#.*$ || -z "$line" ]] && continue
                     EXCLUDES+=(--exclude="$line")
                   done < .packagerignore
                 fi
                 
-                # Use rsync to copy everything except excluded files/folders
-                rsync -a . ${{ inputs.package-dir }}/$EXTENSION_NAME/ "${EXCLUDES[@]}"
+                # Use rsync to copy everything except excluded files/folders to build dir
+                rsync -a . "$BUILD_DIR/$EXTENSION_NAME/" "${EXCLUDES[@]}"
                 
                 # Ensure main files are present (overwrite if needed)
-                cp ${EXTENSION_NAME}.php ${{ inputs.package-dir }}/$EXTENSION_NAME/ 2>/dev/null || true
-                cp $EXTENSION_XML ${{ inputs.package-dir }}/$EXTENSION_NAME/
-                if [ -f "${{ inputs.helper-file }}" ]; then cp ${{ inputs.helper-file }} ${{ inputs.package-dir }}/$EXTENSION_NAME/; fi
-                if [ -f "${{ inputs.license-file }}" ]; then cp ${{ inputs.license-file }} ${{ inputs.package-dir }}/$EXTENSION_NAME/; fi
-                if [ -n "${{ inputs.favicon-file }}" ] && [ -f "${{ inputs.favicon-file }}" ]; then cp ${{ inputs.favicon-file }} ${{ inputs.package-dir }}/$EXTENSION_NAME/; fi
-                if [ -f "${{ inputs.changelog-file }}" ]; then cp ${{ inputs.changelog-file }} ${{ inputs.package-dir }}/$EXTENSION_NAME/; fi
+                cp ${EXTENSION_NAME}.php "$BUILD_DIR/$EXTENSION_NAME/" 2>/dev/null || true
+                cp "$EXTENSION_XML" "$BUILD_DIR/$EXTENSION_NAME/"
+                if [ -f "${{ inputs.helper-file }}" ]; then cp ${{ inputs.helper-file }} "$BUILD_DIR/$EXTENSION_NAME/"; fi
+                if [ -f "${{ inputs.license-file }}" ]; then cp ${{ inputs.license-file }} "$BUILD_DIR/$EXTENSION_NAME/"; fi
+                if [ -n "${{ inputs.favicon-file }}" ] && [ -f "${{ inputs.favicon-file }}" ]; then cp ${{ inputs.favicon-file }} "$BUILD_DIR/$EXTENSION_NAME/"; fi
+                if [ -f "${{ inputs.changelog-file }}" ]; then cp ${{ inputs.changelog-file }} "$BUILD_DIR/$EXTENSION_NAME/"; fi
                 
-                echo "Package contents:"
-                ls -la ${{ inputs.package-dir }}/$EXTENSION_NAME/
+                echo "Build directory contents:"
+                ls -la "$BUILD_DIR/$EXTENSION_NAME/"
                 
                 # Generate directory tree if requested
                 if [ -n "${{ inputs.dir-tree-file }}" ]; then
-                  # Check if tree is available, if not try to install it
-                  if ! command -v tree &> /dev/null; then
-                    if command -v apt-get &> /dev/null; then
-                      sudo apt-get update && sudo apt-get install -y tree
-                    fi
-                  fi
-                
                   if command -v tree &> /dev/null; then
-                    tree ${{ inputs.package-dir }}/$EXTENSION_NAME > ${{ inputs.package-dir }}/${{ inputs.dir-tree-file }}
+                    tree "$BUILD_DIR/$EXTENSION_NAME" > "$BUILD_DIR/${{ inputs.dir-tree-file }}"
                   else
-                    # Fallback to find if tree is not available
-                    find ${{ inputs.package-dir }}/$EXTENSION_NAME -type f | sort > ${{ inputs.package-dir }}/${{ inputs.dir-tree-file }}
+                    find "$BUILD_DIR/$EXTENSION_NAME" -type f | sort > "$BUILD_DIR/${{ inputs.dir-tree-file }}"
                   fi
                 fi
                 
-                # Create ZIP archive
-                cd ${{ inputs.package-dir }}
-                zip -r ${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip $EXTENSION_NAME
-                echo "Created ZIP archive: ${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip"
+                # Create ZIP archive in build/ with root files
+                cd "$BUILD_DIR/$EXTENSION_NAME"
+                zip -r "../${EXTENSION_NAME}_${VERSION}.zip" .
+                cd -
                 
-                # Output package path
-                echo "package_path=${{ inputs.package-dir }}/${EXTENSION_NAME}_${{ steps.set_version.outputs.version }}.zip" >> $GITHUB_OUTPUT
+                # Output package path (.zip)
+                echo "package_path=$BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
 
         -   name: Create GitHub Release
             if: inputs.create-release == 'true'
