Fix GitHub release and artifact paths to use root directory instead of build subdirectory

--- a/action.yml
+++ b/action.yml
@@ -497,7 +497,7 @@ runs:
                 tag_name: ${{ steps.set_version.outputs.version }}
                 name: ${{ steps.extension_details.outputs.extension_name }} ${{ steps.set_version.outputs.version }}
                 files: |
-                    ${{ inputs.package-dir }}/${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}.zip
+                    ../${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}.zip
                     ${{ inputs.package-dir }}/${{ inputs.dir-tree-file }}
                 draft: false
                 prerelease: false
@@ -543,7 +543,7 @@ runs:
             uses: actions/upload-artifact@v4
             with:
                 name: ${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}
-                path: ${{ inputs.package-dir }}/${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}.zip
+                path: ../${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}.zip
                 retention-days: 90
                 if-no-files-found: warn
 
