Fix ZIP archive creation to use dot notation for all files instead of wildcard pattern

--- a/action.yml
+++ b/action.yml
@@ -451,9 +451,6 @@ runs:
                   --exclude='.gitignore'
                   --exclude='*.bak'
                   --exclude='*.zip'
-                  --exclude='CHANGELOG.md'
-                  --exclude='README.md'
-                  --exclude='readme.md'
                 )
                 # If .packagerignore exists, add its patterns
                 if [ -f .packagerignore ]; then
@@ -491,7 +488,7 @@ runs:
                 
                 # Create ZIP archive in build/ with root files ONLY (no build/ in zip, no nested zip)
                 cd "$PKGDIR"
-                zip -r "../${EXTENSION_NAME}_${VERSION}.zip" ./*
+                zip -r "../${EXTENSION_NAME}_${VERSION}.zip" .
                 cd -
                 
                 # Output package path (.zip)
