--- a/action.yml
+++ b/action.yml
@@ -488,7 +488,7 @@ runs:
                 
                 # Create ZIP archive in build/ with root files ONLY (no build/ in zip, no nested zip)
                 cd "$PKGDIR"
-                zip -r "../${EXTENSION_NAME}_${VERSION}.zip" .
+                zip -r "../${EXTENSION_NAME}_${VERSION}.zip" * .[!.]*
                 cd -
                 
                 # Output package path (.zip)
