--- a/action.yml
+++ b/action.yml
@@ -442,11 +442,36 @@ runs:
                 rm -rf "$OUTER_BUILD_DIR"
                 mkdir -p "$OUTER_BUILD_DIR"
 
-                # Copy the extension folder to temp
-                cp -r "${EXTENSION_NAME}" "$OUTER_BUILD_DIR/"
+                # Create a temp directory named after the extension
+                PKGDIR="$OUTER_BUILD_DIR/${EXTENSION_NAME}"
+                mkdir -p "$PKGDIR"
+
+                # Prepare rsync exclude patterns (do not reference .gitignore at all)
+                EXCLUDES=(
+                  --exclude='.git/'
+                  --exclude='.github/'
+                  --exclude='.DS_Store'
+                  --exclude='Thumbs.db'
+                  --exclude='node_modules/'
+                  --exclude='.packagerignore'
+                  --exclude='build/'
+                  --exclude='.gitignore'
+                  --exclude='*.bak'
+                  --exclude='*.zip'
+                )
+                # If .packagerignore exists, add its patterns
+                if [ -f .packagerignore ]; then
+                  while IFS= read -r line; do
+                    [[ "$line" =~ ^#.*$ || -z "$line" ]] && continue
+                    EXCLUDES+=(--exclude="$line")
+                  done < .packagerignore
+                fi
+
+                # Copy all relevant files/folders from repo root into the temp extension directory
+                rsync -a ./ "$PKGDIR/" "${EXCLUDES[@]}"
 
                 echo "External build/package directory contents:"
-                ls -la "$OUTER_BUILD_DIR/${EXTENSION_NAME}"
+                ls -la "$PKGDIR"
 
                 # Create ZIP archive so the zip contains only the extension folder at the root
                 cd "$OUTER_BUILD_DIR"
